nickel-lang-lib/tests/integration/fail/core/comparison_leq_bool_array.ncl
# test.type = 'error'
#
# [test.metadata]
# error = 'EvalError::NAryPrimopTypeError'
true <= []
